fix overlap for mobile

--- a/styles.css
+++ b/styles.css
@@ -177,3 +177,10 @@ p {
 
     
 }
+@media (max-width: 767px) {
+    .show {
+        background-color: #19223b;
+        border-radius: 10px;
+        z-index: 1;
+    }
+}
